my picture added

--- a/pretty-css.html
+++ b/pretty-css.html
@@ -27,6 +27,10 @@
         .hot{
             background-color: darkgreen;
         }
+        img{
+            height: 20%;
+            width: 30%;
+        }
 
     </style>
 </head>
@@ -36,7 +40,8 @@
     <h3 id="usa">Joe Biden Khali Khali usta khai</h3>
     <h3>Noth Korea er special Person</h3>
  
-    <h4 class="birani hot">first</h4>
+    <h4 class="birani hot
+    ">first</h4>
     <h4 class="hot">Second</h4>
     <h4 class="birani">Third</h4>
     <p>Future Hubby Tmi Koi...!!!! Romantic person. My first love... Future Hubby Tmi Koi...!!!! Romantic person. My first love</p>
@@ -44,6 +49,7 @@
     <p>Tmi kothai ree!!</p>
     <p>Ghurte jabo cholo re </p>
     <h2>Socially distanted header tag</h2>
+    <img src="images/alaminsardar.png" alt="">
     <ul>
         <li class="birani"> Hot boy</li>
     </ul>
